# ftl2-stargate

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
ftl2_stargate/: __init__.py  app.py  auth.py  config.py  proxy.py  routes.py
ftl2_stargate/templates/: index.html
