[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ftl2-stargate"
version = "0.1.0"
description = "Authenticated gateway for FTL2 web applications"
license = "Apache-2.0"
requires-python = ">=3.13"
authors = [{ name = "Ben" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "websockets>=14.0",
    "starlette>=0.45.0",
    "jinja2>=3.1.0",
]

[project.scripts]
ftl2-stargate = "ftl2_stargate:cli"

[tool.hatch.build.targets.wheel]
packages = ["ftl2_stargate"]

[tool.hatch.metadata]
allow-direct-references = true
